--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             had crossed the point at which they could be used as rendering devices for multimedia content. Finally, “CD ripping” became a trivial method 
             for content injection.</p>
 
-        <p><img class="img_1" src="images/1.jpg" height="110px" width="200px"><b><i>The first embodiments of this new darknet were central internet servers with large collections of MP3 audio files. 
+        <p><img class="img_1" src="images/1.jpg" height="110px" width="auto"><b><i>The first embodiments of this new darknet were central internet servers with large collections of MP3 audio files. 
                 A fundamental change that came with these servers was the use of a new distribution network: The internet displaced the sneaker net – at 
                 least for audio content. This solved several problems of the old darknet.  First, latency was reduced drastically.</i></b></p>  
                 
